--- a/doc/arxiv/v2/preamble/iclr2025_conference.sty
+++ b/doc/arxiv/v2/preamble/iclr2025_conference.sty
@@ -20,7 +20,7 @@
 \RequirePackage{natbib}
 
 % modification to natbib citations
-\setcitestyle{authoryear,round,citesep={;},aysep={,},yysep={;}}
+\setcitestyle{numbers,square}
 
 \renewcommand{\topfraction}{0.95}   % let figure take up nearly whole page
 \renewcommand{\textfraction}{0.05}  % let figure take up nearly whole page
